--- a/index.html
+++ b/index.html
@@ -167,82 +167,44 @@
                     <div class="skills-container">
                         <div class="skill-category">
                             <h3>Programming Languages</h3>
-                            <div class="skills-progress-list">
-                                <div class="skill-progress-item">
-                                    <div class="skill-header">
-                                        <div class="skill-logo">
-                                            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-                                                <path d="M16.5992 8.667c0-.7307-.2656-1.3958-.7138-1.9063C15.4372 6.25 14.7646 5.9531 14 5.9531c-.7646 0-1.4372.2969-1.8854.8076-.4482.5105-.7138 1.1756-.7138 1.9063 0 .7305.2656 1.3958.7138 1.9063.4482.5107 1.1208.8076 1.8854.8076.7646 0 1.4372-.2969 1.8854-.8076.4482-.5105.7138-1.1758.7138-1.9063zM14 7.1172c.3632 0 .6958.1406.9326.3945.2368.254.373.5967.373.9883 0 .3916-.1362.7343-.373.9883-.2368.254-.5694.3945-.9326.3945-.3632 0-.6958-.1406-.9326-.3945-.2368-.254-.373-.5967-.373-.9883 0-.3916.1362-.7343.373-.9883.2368-.254.5694-.3945.9326-.3945zM12 2C6.4771 2 2 6.4771 2 12s4.4771 10 10 10 10-4.4771 10-10S17.5229 2 12 2z"/>
-                                            </svg>
-                                        </div>
-                                        <span class="skill-name">C</span>
-                                        <span class="skill-percentage">85%</span>
-                                    </div>
-                                    <div class="skill-progress-bar">
-                                        <div class="skill-progress-fill" data-progress="85"></div>
-                                    </div>
-                                </div>
-                                <div class="skill-progress-item">
-                                    <div class="skill-header">
-                                        <div class="skill-logo">
-                                            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-                                                <path d="M22.394 6c-.167-.29-.398-.543-.652-.69L12.926.22c-.509-.294-1.34-.294-1.848 0L2.26 5.31c-.508.293-.923 1.013-.923 1.6v10.18c0 .294.104.62.271.91.167.29.398.543.652.69l8.816 5.09c.508.293 1.34.293 1.848 0l8.816-5.09c.254-.147.485-.4.652-.69.167-.29.27-.616.27-.91V6.91c.003-.294-.1-.62-.268-.91zM12 19.11c-3.92 0-7.109-3.19-7.109-7.11 0-3.92 3.19-7.11 7.109-7.11 3.92 0 7.109 3.19 7.109 7.11 0 3.92-3.19 7.11-7.109 7.11z"/>
-                                                <path d="M11.276 11.013h-1.06v.936h1.06v1.06h-.936v1.06h-.936v-1.06H8.34v-1.06h1.06v-.936H8.34v-1.06h1.06v-1.06h.936v1.06h1.06v1.06zm3.184.936h1.06v1.06h-1.06v1.06h-.936v-1.06h-1.06v-1.06h1.06v-.936h-.936v-1.06h1.06v-1.06h.936v1.06h1.06v1.06h-1.06v.936z"/>
-                                            </svg>
-                                        </div>
-                                        <span class="skill-name">C++</span>
-                                        <span class="skill-percentage">90%</span>
-                                    </div>
-                                    <div class="skill-progress-bar">
-                                        <div class="skill-progress-fill" data-progress="90"></div>
-                                    </div>
-                                </div>
-                                <div class="skill-progress-item">
-                                    <div class="skill-header">
-                                        <i class="fab fa-java"></i>
-                                        <span class="skill-name">Java</span>
-                                        <span class="skill-percentage">88%</span>
-                                    </div>
-                                    <div class="skill-progress-bar">
-                                        <div class="skill-progress-fill" data-progress="88"></div>
-                                    </div>
-                                </div>
-                                <div class="skill-progress-item">
-                                    <div class="skill-header">
-                                        <i class="fab fa-python"></i>
-                                        <span class="skill-name">Python</span>
-                                        <span class="skill-percentage">92%</span>
-                                    </div>
-                                    <div class="skill-progress-bar">
-                                        <div class="skill-progress-fill" data-progress="92"></div>
-                                    </div>
-                                </div>
-                                <div class="skill-progress-item">
-                                    <div class="skill-header">
-                                        <i class="fab fa-js-square"></i>
-                                        <span class="skill-name">JavaScript</span>
-                                        <span class="skill-percentage">87%</span>
-                                    </div>
-                                    <div class="skill-progress-bar">
-                                        <div class="skill-progress-fill" data-progress="87"></div>
-                                    </div>
-                                </div>
-                                <div class="skill-progress-item">
-                                    <div class="skill-header">
-                                        <div class="skill-logo">
-                                            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-                                                <path d="M1.3 24l11.3-11.5L24 24zM0 0h12L0 12.5zM13.4 0L0 14v10l12-12L24 0z"/>
-                                            </svg>
-                                        </div>
-                                        <span class="skill-name">Kotlin</span>
-                                        <span class="skill-percentage">75%</span>
-                                    </div>
-                                    <div class="skill-progress-bar">
-                                        <div class="skill-progress-fill" data-progress="75"></div>
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="skill-category">
+    <h3>Programming Languages</h3>
+    <div class="skills-grid">
+        <div class="skill-card">
+            <i class="fas fa-code"></i>
+            <span>C</span>
+        </div>
+        <div class="skill-card">
+            <i class="fas fa-code"></i>
+            <span>C++</span>
+        </div>
+        <div class="skill-card">
+            <i class="fab fa-java"></i>
+            <span>Java</span>
+        </div>
+        <div class="skill-card">
+            <i class="fab fa-python"></i>
+            <span>Python</span>
+        </div>
+        <div class="skill-card">
+            <i class="fab fa-js"></i>
+            <span>JavaScript</span>
+        </div>
+        <div class="skill-card">
+            <i class="fas fa-code"></i>
+            <span>Kotlin</span>
+        </div>
+        <div class="skill-card">
+            <i class="fas fa-code"></i>
+            <span>C#</span>
+        </div>
+        <div class="skill-card">
+            <i class="fab fa-swift"></i>
+            <span>Swift</span>
+        </div>
+    </div>
                         </div>
+                            
 
                         <div class="skill-category">
                             <h3>AI/ML & Data Science</h3>
