--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <div class="skills-container">
                         <div class="skill-category">
                             <h3>Programming Languages</h3>
-                        <div class="skill-category">
+                        <div class="skill-grid">
     <div class="skills-grid">
         <div class="skill-card">
             <i class="fas fa-code"></i>
