--- a/index.html
+++ b/index.html
@@ -202,8 +202,11 @@
             <span>Swift</span>
         </div>
     </div>
+                            </div>
+                          </div>
                         </div>
-                            
+                    </div>
+                 </div>
 
                         <div class="skill-category">
                             <h3>AI/ML & Data Science</h3>
