--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta name="author" content="Manoranjan Pradhan">
     <meta name="robots" content="index,follow">
     <link rel="canonical" href="https://manoranjan-pradhan.github.io">
-
+    <meta name="google-site-verification" content="qU0Sfkjk3t17x175imSBuh4wcNiD4MCUBaQtFa13Zjw" />
+    
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://manoranjan-pradhan.github.io">
