--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manoranjan Pradhan - Software Developer</title>
+    <meta name="title" content="Manoranjan Pradhan - Software Developer">
     <meta name="description" content="Hi, I'm Manoranjan Pradhan. Explore my projects, skills, and web development journey.">
     <meta name="keywords" content="Manoranjan Pradhan, Software Developer, Portfolio, Web Development, JavaScript, React, Node.js">
     <meta name="author" content="Manoranjan Pradhan">
