--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="robots" content="index,follow">
     <link rel="canonical" href="https://manoranjan-pradhan.github.io">
     <meta name="google-site-verification" content="qU0Sfkjk3t17x175imSBuh4wcNiD4MCUBaQtFa13Zjw" />
+    <link rel="canonical" href="https://manoranjan-0c.github.io/Manoranjan-Pradhan/">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
